# demisto-py

./: .coveragerc  .flake8  .gitignore  .lgtm.yaml  .pylintrc  .swagger-codegen-ignore  API_CODE_GEN.md  CHANGELOG.md  README.md  batch_util_example.py  create_incident_example.py  deploy.sh  example.py  format_docs.py  gen-code.sh  generate_api.py  incidents_mttr_example.py  incidents_search_example.py  indicators_search_example.py  integrations_example.py  mock_tests.py  pyproject.toml  requirements.txt  server_api_swagger.json  setup.py  swagger-config.json  test-requirements.txt  tox.ini  update_automation_example.py  upload_file_to_warroom_example.py  verify.sh  widget_upload.py
.circleci/: config.yml
.config/: flake8
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
demisto/: __init__.py  api_client.py  client.py  configuration.py  rest.py
demisto/api/: __init__.py  demisto_api.py
demisto/models/: __init__.py  advance_arg.py  arg_atomic_filter.py  arg_filter.py  arg_transformer.py  audit_result.py  automation_script.py  automation_script_api.py  automation_script_filter.py  automation_script_filter_wrapper.py  automation_script_result.py  complex_arg.py  create_incident_request.py  dashboard.py  data_collection_form.py  date_range.py  date_range_filter.py  delete_evidence.py  docker_images_result.py  download_entry.py  ending_type.py  entry.py  entry_category.py  entry_reputation.py  evidence_data.py  evidences.py  evidences_filter_wrapper.py  evidences_search_response.py  field_group.py  field_mapping.py  field_term_location_map.py  file_metadata.py  generic_indicator_update_batch.py  generic_string_date_filter.py  generic_string_filter.py  group.py  (+62 more)
demisto_client/: __init__.py  testing.py
docs/: AdvanceArg.md  AdvanceArg.md-e  ArgAtomicFilter.md  ArgAtomicFilter.md-e  ArgFilter.md  ArgFilter.md-e  ArgTransformer.md  Argument.md  ArrayPositions.md  ArrayPositions.md-e  Attachment.md  Attachment.md-e  Audit.md  Audit.md-e  AuditResult.md  AuditResult.md-e  AutomationScript.md  AutomationScript.md-e  AutomationScriptAPI.md  AutomationScriptFilter.md  AutomationScriptFilterWrapper.md  AutomationScriptResult.md  AutomationScriptResult.md-e  Command.md  CommonFields.md  ComplexArg.md  ConfigDataType.md  ConfigField.md  CreateIncidentRequest.md  CustomFields.md  DBotScore.md  DBotScore.md-e  Dashboard.md  DataCollectionForm.md  DataCollectionForm.md-e  DateRange.md  DateRangeFilter.md  DefaultApi.md  DefaultApi.md-e  DeleteEvidence.md  (+210 more)
examples/: batch_util_example.py  create_incident_example.py  download_file_example.py  incidents_search_example.py  indicators_search_example.py  update_automation_example.py  widget_upload.py
test/: test_advance_arg.py  test_arg_atomic_filter.py  test_arg_filter.py  test_arg_transformer.py  test_argument.py  test_array_positions.py  test_attachment.py  test_audit.py  test_audit_result.py  test_automation_script.py  test_automation_script_api.py  test_automation_script_filter.py  test_automation_script_filter_wrapper.py  test_automation_script_result.py  test_command.py  test_common_fields.py  test_complex_arg.py  test_config_data_type.py  test_config_field.py  test_create_incident_request.py  test_custom_fields.py  test_d_bot_score.py  test_dashboard.py  test_data_collection_form.py  test_date_range.py  test_date_range_filter.py  test_default_api.py  test_delete_evidence.py  test_docker_image.py  test_docker_images_result.py  test_download_entry.py  test_duration.py  test_ending_type.py  test_entry.py  test_entry_category.py  test_entry_history.py  test_entry_reputation.py  test_entry_task.py  test_entry_type.py  test_evidence.py  (+132 more)
tests/: examples_test.py  mock_tests.py  mocks_test.py
tests_data/: layoutscontainer-test.json
(+281 files in other folders)
